--- a/css/styles.css
+++ b/css/styles.css
@@ -556,15 +556,62 @@ body {
   margin-top: 4px;
   margin-bottom: 4px;
 }
-.form-input:focus {
+.form-input-name {
+  width: 448px;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  margin-top: 4px;
+  margin-bottom: 4px;
+}
+
+.form-input-phone {
+  width: 448px;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  margin-top: 4px;
+  margin-bottom: 4px;
+}
+
+.form-input-email {
+  width: 448px;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  margin-top: 4px;
+  margin-bottom: 4px;
+}
+
+.form-input-name:focus {
+  outline-color: var(--blue);
+}
+.form-input-name:focus + .form-icon-person svg {
+  fill: var(--blue);
+}
+.form-input-phone:focus {
+  outline-color: var(--blue);
+}
+.form-input-email:focus {
   outline-color: var(--blue);
 }
 
-.form-icon {
+.form-icon-person {
   position: absolute;
   top: 50%;
   left: 3%;
 }
+.form-icon-phone {
+  position: absolute;
+  top: 50%;
+  left: 3%;
+}
+.form-icon-email {
+  position: absolute;
+  top: 50%;
+  left: 3%;
+}
+
 .policies {
   margin-top: 20px;
   margin-bottom: 30px;
@@ -576,11 +623,9 @@ body {
   border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
   background-color: #ffffff;
-  cursor: pointer;
   width: 30px;
   height: 30px;
   cursor: pointer;
-  padding: 6px;
   justify-content: center;
   align-items: center;
 }
@@ -612,6 +657,9 @@ body {
 }
 .xclose {
   fill: rgba(0, 0, 0, 1);
+  position: relative;
+  top: 5px;
+  left: 5px;
 }
 .textarea {
   width: 448px;
@@ -627,11 +675,12 @@ body {
   font-size: 12px;
   letter-spacing: 1%;
   resize: none;
+  margin-bottom: 20px;
 }
 .textarea:focus {
   outline-color: var(--blue);
 }
-.form-icon:focus svg {
+.form-icon-person:focus svg {
   fill: var(--blue);
 }
 
@@ -642,7 +691,8 @@ body {
   color: rgba(255, 255, 255, 1);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-  margin-top: 20px;
+  margin-top: 30px;
+  border: 0;
 }
 
 .policies::before {
