--- a/css/styles.css
+++ b/css/styles.css
@@ -202,7 +202,7 @@ body {
   font-style: normal;
   text-align: left;
   margin-top: 0;
-  line-height: 24px;
+  font-size: 14px;
 }
 .contacts {
   list-style-type: none;
