--- a/css/styles.css
+++ b/css/styles.css
@@ -181,7 +181,6 @@ body {
 .button {
   font-size: 16px;
   font-weight: 500;
-  font-family: "roboto";
   cursor: pointer;
   margin-right: 8px;
   border: 0;
@@ -573,6 +572,9 @@ body {
   position: absolute;
   top: 50%;
   left: 3%;
+  fill: #212121;
+  width: 18px;
+  height: 18px;
 }
 .form-input-name:focus + .form-icon-person,
 .form-input-phone:focus + .form-icon-phone,
@@ -581,10 +583,6 @@ body {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.policies {
-  margin-top: 20px;
-  margin-bottom: 30px;
-}
 .close-btn {
   position: absolute;
   right: 8px;
@@ -665,7 +663,10 @@ body {
   border: 0;
   cursor: pointer;
 }
-
+.policies {
+  font-size: 14px;
+  margin-top: 30px;
+}
 .policies::before {
   content: "";
   display: inline-block;
@@ -673,6 +674,9 @@ body {
   height: 16px;
   border: 2px solid rgba(33, 33, 33, 1);
   border-radius: 4px;
+  position: absolute;
+  left: 55px;
+  bottom: 142px;
 }
 .policies-checkbox {
   width: 16px;
@@ -705,9 +709,9 @@ body {
   padding-left: 16px;
 }
 .newsletter-input:focus {
-  outline-color: var(--blue);
-  border: 0;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  outline: 0;
+  border: 1px solid var(--blue);
 }
 
 .newsletter-button {
